Opened 8 years ago
Closed 8 years ago
#13599 closed bug (fixed)
[Patch] media/BufferConsumer.cpp: Fix ordered comparison between pointer and zero
Reported by: | mt | Owned by: | Barrett |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Kits/Media Kit | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Since 'group' is pointer, I think comparison at line 272 may be replaced to null pointer check.
http://cgit.haiku-os.org/haiku/tree/src/kits/media/BufferConsumer.cpp#n272
/home/haiku/haiku/haiku/src/kits/media/BufferConsumer.cpp:272:12: error: ordered comparison between pointer and zero ('BBufferGroup *' and 'int') if (group > 0) { ~~~~~ ^ ~
Attachments (1)
Change History (4)
by , 8 years ago
Attachment: | 0031-BufferConsumer.cpp-Fix-ordered-comparison-between-po.patch added |
---|
comment:1 by , 8 years ago
patch: | 0 → 1 |
---|
comment:2 by , 8 years ago
Note:
See TracTickets
for help on using tickets.
Introduced here, but was present since 2002: http://cgit.haiku-os.org/haiku/commit/src/kits/media/BufferConsumer.cpp?id=0341eac71b9b939a8053c2fb5925c63814114965
Patch LGTM.